Weave first images in

--- a/posts/lesson-2024-10-11.md
+++ b/posts/lesson-2024-10-11.md
@@ -1,31 +1,31 @@
 
 We’ve added two new people to the group.  One of which I played today, while the other waits for a more opportune time.  In the game with John, many of the moves were discussed and agreed upon, but we’ll go through the reasoning again.
 
-<!-- 1 -->
+![image 1](images/igo-20241011-1.jpg)
 
 John played two 3-4 points in his corners, while I played. 3-4 and a 4-4.  He made a low approach to my 3-4 stone in the lower left and extended high to d9.  This basically required me to low approach his  upper left corner, as a high approach wouldn’t give me a good extension.  My extension was low to threaten a slide to b9.
 
-<!-- 2 -->
+![image 2](images/igo-20241011-2.jpg)
 
 Black kicked my extension, so I stood with d11.  At this point black jumped out, which was a good move…but it had been his turn to approach my other corner.  This allowed me to approach his upper right corner (out of turn, but not critical on this board), this time with a high approach.
 
-<!-- 3 -->
+![image 3](images/igo-20241011-3.jpg)
 
 The sequence in the upper right played out with white k17 extending low, due to g17 being on the 3rd line.  Extending high on k16 would have given black a chance to undermine my position.  R6 then approached my 4-4 stone, I backed off, s4 slide under my 4-4 stone to grab some of the corner, so r3 blocked.  Giving black a chance to play r3 would be giving up the corner (not good).  Now, the correct extension for black (to finish the sequence) is r9.  However, black is all over the 3rd line, so getting up on the 4th line is a good idea.  Playing q8 or q9 would have been a more lower right corner oriented move, but playing the midpoint ‘starts’ to tie the two sides together.  However, it is 3 spaces from each side, so an invasion of the midpoint is very possible.
 
-<!-- 4 -->
+![image 4](images/igo-20241011-4.jpg)
 
 Invasion is not a good idea with weak groups around, who white plays f16 to get black’s f17 response, then jumps out to f11.  Now, black realizes that leaving behind invasion points in not a good idea, so p6 jumps out to give depth to black’s position, which discourages white from thinking about invading.  Instead, white puts a stone on the 4th line to add depth to the bottom and reach out towards white’s other corner.  Black then jumps out from the left, creating a nice pocket, but white responds with another stone on the 4th line, sealing the connection with the other corner.
 
-<!-- 5 -->
+![image 5](images/igo-20241011-5.jpg)
 
 Here’s the screenshot that got out of sequence (sorry).  When coming out, we often push on one side before pushing out on the other, which creates a pocket.
 
-<!-- 6 -->
+![image 6](images/igo-20241011-6.jpg)
 
 This sequence shows b1 pushing out into the center, while w2 plays to defend at the top.  Then w4 defends on the left after b3 jumps out.  B5 wasn’t especially threatening, so w6 took the opportunity to widen white’s position.  After b7 defends, white jumps out to h11.
 
-<!-- 7 -->
+![image 7](images/igo-20241011-7.jpg)
 
 At this stage, entering the fighting phase of the middle game, black is ahead by .8 points.  Blacks should be looking to secure the safety of his groups by expanding their positions and get more points, while restricting white’s ability to get those same points.  What you don’t want to do is to get into a fight that doesn’t secure you any points of territory, but does spill over and threaten the point value or the safety of your groups.  That’s it for today!
 
