Use h2 for post titles

--- a/posts/lesson-2024-10-11.md
+++ b/posts/lesson-2024-10-11.md
@@ -1,4 +1,6 @@
 
+## lesson 2024-10-11
+
 We’ve added two new people to the group.  One of which I played today, while the other waits for a more opportune time.  In the game with John, many of the moves were discussed and agreed upon, but we’ll go through the reasoning again.
 
 ![image 1](images/igo-20241011-1.jpg)
