Update prologue with sequence numbers

--- a/posts/prologue-2024-10-09.md
+++ b/posts/prologue-2024-10-09.md
@@ -23,3 +23,15 @@ Here are the two 3-4 spots for red.  The red arrow is the red player’s directi
 
 Oh yeah.  We may play several openings, rather than a full game, as we want to see how facings change development of stones on the board.
 
+### Update 2024-10-18
+
+These are the 4 joseki we use...
+
+![image 5](images/prologue-20241009-5.jpg)
+
+![image 6](images/prologue-20241009-6.jpg)
+
+![image 7](images/prologue-20241009-7.jpg)
+
+We use just the three in order to simplify the opening.  There are enough variables to these three, so we want to understand them and how they affect the rest of the board first.  Just the facing of the 3-4 stones in relation to the stones in the other corners creates  major differences.  However, we really want to focus on what to do on the board after the corner sequences are done, so we restrict ourselves to the three.
+
