Complete third lesson

--- a/posts/lesson-2024-10-18.md
+++ b/posts/lesson-2024-10-18.md
@@ -5,17 +5,103 @@
 
 Last time, you opened with two 3-4s facing in a pinwheel pattern.
 
-![image 1](images/a_20241018_1.jpg)
+![image 1](images/l20241018/igo1.jpg)
 
 This time, I’d like you to try one of these two patterns, both facing to yourself or both facing to your opponent.
 
-![image 2](images/a_20241018_2.jpg)
+![image 2](images/l20241018/igo2.jpg)
 
-![image 3](images/a_20241018_3.jpg)
+![image 3](images/l20241018/igo3.jpg)
 
 Work out how the joseki sequences would end up looking and decide which you’d like to try.
 
 I’ll stick with one 3-4 and a 4-4.
 
 ### Actual lesson
+
+John and I had an interesting session today, trying several openings.
+
+![image 4](images/l20241018/igo4.jpg)
+
+This is as far as we got with the first opening.  I had suggested starting his 3-4s facing each other (as done here) or both facing his opponent (not done here).  I did my single 3-4 and a 4-4.  He played upper left first, so by playing my 4-4 stone in the lower right, he could either play r16 to face his own stone or play c4 so both would face my stones.
+
+His first approach was low in the lower left for a standard joseki.  Next, I approached the upper left high with a high extension (marked).  He then approached my 4-4, but didn’t slide into the corner before his 2 space extension.  I then did a low approach to his upper right corner, but didn’t extend, since my marked stone acted like a loose extension.  Instead, I made a 2 space extension at the bottom.  This threatened a slide to j2 under his high 4th line stone, so I was kicked and stood.  At this point, John suggested we try the opening again.
+
+![image 5](images/l20241018/igo5.jpg)
+
+The four opening stones were the same and he again approached the lower left corner low, but extended low, as well, remembering the threat to a 4th line stone.  The left was again a standard sequence.  This time, in the lower right, John slid first, then extended.  However, in the upper right, when I low approached his 3-4 stone, he attached over the top, rather than kicking.  We decided to ‘learn by doing’, so we didn’t undo (and kick).
+
+![image 6](images/l20241018/igo6.jpg)
+
+W1 naturally wants to hane to reach back to the k16 stone.  It also threatens an Atari on the marked black stone.
+
+![image 7](images/l20241018/igo7.jpg)
+
+If black wanted to Keima down the side, doing it straightaway might have been better.
+
+![image 8](images/l20241018/igo8.jpg)
+
+![image 9](images/l20241018/igo9.jpg)
+
+Either protect your corner or extend against a Hane would have been good continuations.
+
+![image 10](images/l20241018/igo10.jpg)
+
+I, of course, followed through on the Atari threat w1, b2 didn’t save, so w3 took.  The b4 extension was good for the side, but w5 took the corner.
+
+![image 11](images/l20241018/igo11.jpg)
+
+B1 would have been a simple way to save the corner.
+
+![image 12](images/l20241018/igo12.jpg)
+
+![image 13](images/l20241018/igo13.jpg)
+
+The difference between trying something before you’re ready and sticking to the joseki that we’re learning is 15 points (in this situation).
+
+![image 14](images/l20241018/igo14.jpg)
+
+Black could have dropped straight down, but if white doesn’t play s17, it’ll be a good move for black.  I didn’t play it immediately, as bigger fish to fry.  W1 extends the left side, so black follows suit.  W3 seals the lower right corner and b4 saves his s4 stone and solidifies his position.  Finally, w5 extends white’s position at the bottom.
+
+![image 15](images/l20241018/igo15.jpg)
+
+White is up by 23.  As black worms out on the left, he isn’t making any points, while white is creating a pocket behind his responding stones.  The right side has more potential for whoever gets there first, black jumping into the center at the top and bottom, or white jumping into the center from the top and bottom.
+
+![image 16](images/l20241018/igo16.jpg)
+
+Black does push out into the center at the top of right side, but white has sealed off a large pocket of points in response.  Meanwhile, white pushed up from the bottom first and black’s response has left cutting points, especially a double Atari in the center of his line.  The lack of any points for black in the center gives white a 48 point advantage.
+
+![image 17](images/l20241018/igo17.jpg)
+
+If we look at the result in terms of B/W starting corners and A approaches, we see that the upper right had a significant impact.  White had 2 approaches at the top, with one stealing the corner. and both approaches were able to push into the center.  On the left, both corners were able to establish bases in the direction the approaches pushed them.  At the bottom, black’s approach was limited in expanding along the bottom, but pushed upward and made a nice pocket of points.  White did about the same, but had sealed off his corner, pushed to the center line at the bottom and pushed higher into the center. On the right, pushing into the center before white did would have helped, but losing a corner is a major problem (unless you get compensation elsewhere).
+
+[On YouTube ↗](https://www.youtube.com/watch?v=TfCKkfv_ggc)
+
+![image 18](images/l20241018/igo18.jpg)
+
+We started a 3rd game to run through another opening.  Black left an unfinished approach in the lower right, so he could approach again in the lower left.  After that joseki, I approach high in the upper left and John decided to enclose the top right.  I immediately enclosed the bottom right with the marked stone, which left black’s stone open to a severe pincer.
+
+![image 19](images/l20241018/igo19.jpg)
+
+John, of course, created a base with b1.  I expanded at the top with w2 Keima.  B3 created issues on the right with a 3 space, 2 space, 2 space position, for too much lightness.  Meanwhile, on the left, white took advantage of one of the midpoints in a 3 space, 3 space, 2 space position.
+
+![image 20](images/l20241018/igo20.jpg)
+
+Dropping down c9 is the better move here, not d10.  The 3 white stones are very strong and the black’s 2 space extension can probably be exploited, so I jumped into the other 3 space midpoint.  If nothing else (meaning if it can’t escape), it leaves behind aji that I can use to help my other stones.
+
+![image 21](images/l20241018/igo21.jpg)
+
+Black’s moves helped me and a simple w1 would have linked my stones together.
+
+![image 22](images/l20241018/igo22.jpg)
+
+Of course, I pushed through instead and the b2 block left cutting points behind.  W3 was Atari, but b4 ataried back, so w5 connected and b6 connected.  The 2 black stones are dead, as 2 liberties to 3, so white caps the black’s stone open stones in the upper left, while also making a light connection for the 2 white groups.
+
+![image 23](images/l20241018/igo23.jpg)
+
+After white plays b10, black needs to secure the two black pushing stones.
+
+![image 24](images/l20241018/igo24.jpg)
+
+Black played elsewhere, so w1 / w3 kills the 2 black stones.
 
