Add addendum to 2024-10-25

--- a/posts/lesson-2024-10-25.md
+++ b/posts/lesson-2024-10-25.md
@@ -53,3 +53,40 @@ This was perhaps black’s best move of the game, threatening to push into my po
 
 [On YouTube ↗](https://www.youtube.com/watch?v=YbETKAyn5QU)
 
+
+### Addendum 2023-10-27
+
+What should I have done in this situation?  The answer is usually, You shouldn’t have gotten yourself into that situation.
+
+![image 13](images/l20241025/igo13.jpg)
+
+Losing the bottom right started with not finishing the joseki.  Sharing two corners each is the way we create a level playing field.  Go is about finding the correct move for the situation on the board.
+
+![image 14](images/l20241025/igo14.jpg)
+
+Ok, so you’ve made a mistake and your opponent is calling you out.  Find the correct move for that situation.
+
+![image 15](images/l20241025/igo15.jpg)
+
+If black had simplified here, where would have white gone next. Keep pushing ahead?  Block black from jumping out at the bottom? Start to cap the right side from jumping out?  Extend at the bottom to restrict black there?  Black has a lot of moves to threaten white and white can only do one thing at a time.  If white doesn’t get a local response, then black takes Sente to play where they want.
+
+![image 16](images/l20241025/igo16.jpg)
+
+At this point black already has their pocket.  What is white going to do with their wall?  If black continues locally, then seal off the pocket with a solid two stones.  However, does black want white to keep the initiative? (Being behind by only 27 points is very good)
+
+![image 17](images/l20241025/igo17.jpg)
+
+It might be worth (perhaps) sacrificing some of your pocket to negate the power of white’s wall and threaten creating another large pocket of points.  A two space jump from that mid point is the safest.  You don’t want to get greedy and jump out too far.  Again, white can only play once before it’s your turn to play again.  Being able to play at the top to expand your sector line would be huge.  At some point, you should even be able to come back to the center.  Remember, if you play away and they follow, you can then go back to play the other move.
+
+![image 18](images/l20241025/igo18.jpg)
+
+If you decide to play solid to protect your pocket, w2 was the capping move I played.  B3 deepens the corner (be careful of the elephant eye of q14).  White might be protective of their pocket, so black just pushes a bit more and white keeps protecting and making points.
+
+![image 19](images/l20241025/igo19.jpg)
+
+Black and white both solidify and b13 fills in the elephant eye.
+
+![image 20](images/l20241025/igo20.jpg)
+
+..or b13 threatens to push through the gap into the center and white responds.  Notice that w14 steps back, rather than attaches to b13.  Reducing complications is often the right choice. B15 extends a bit at the top and w16 is a solid block, then b17 fills the elephant eye.
+
