--- a/posts/lesson-2024-10-25.md
+++ b/posts/lesson-2024-10-25.md
@@ -1,7 +1,7 @@
 
 ## Lesson 2024-10-25
 
-Here’s the video of today’s game.  Unfortunately, nobody stopped by to observe and chat, but I had trouble playing two boards (out of practice), so maybe that was for the best.  We’ll be playing again next week, so you can visit live then.
+Here’s [the video](https://www.youtube.com/watch?v=YbETKAyn5QU) of today’s game.  Unfortunately, nobody stopped by to observe and chat, but I had trouble playing two boards (out of practice), so maybe that was for the best.  We’ll be playing again next week, so you can visit live then.
 
 ![image 1](images/l20241025/igo1.jpg)
 
