Start adding links to OGS

--- a/posts/lesson-2024-12-27.md
+++ b/posts/lesson-2024-12-27.md
@@ -65,7 +65,7 @@ Oh, here is that misstep.
 
 There was still fight in that group as it dropped down to the bottom edge to try for life.  Very exciting, watch the video!
 
-[On YouTube ↗](https://www.youtube.com/watch?v=vnCIDR-QhpY)
+[On YouTube ↗](https://www.youtube.com/watch?v=vnCIDR-QhpY) · [On OGS ↗](https://online-go.com/game/70803657)
 
 
 ### Update 2024-12-28
