--- a/posts/lesson-2025-03-07.md
+++ b/posts/lesson-2025-03-07.md
@@ -52,3 +52,14 @@ We need to be mindful of the opening, as it sets up the areas where conflict wil
 
 [On YouTube ↗](https://www.youtube.com/watch?v=qF8_5VvsDdw) · [On OGS ↗](https://online-go.com/game/73049822)
 
+
+### Question 2025-03-12
+
+> Jumping out on the left was good, but perhaps not as good as expanding the
+> lower right.  White’s move is rather small, but it’s a calculated risk that
+> black will respond locally and not expand elsewhere (the better move).
+
+SB: Is expanding the lower right bigger because it would force a response there, so black expands his group and then can go back and defend the left? What if White doesn't respond to a move in the lower right and continues with an invasion on the left splitting blacks left side into 2 weaker groups?
+
+![dia 20](images/l20250307/igo20.jpg)
+
