Link question to point in text

--- a/posts/lesson-2025-03-07.md
+++ b/posts/lesson-2025-03-07.md
@@ -25,11 +25,13 @@ B1 threatens white a bit, but not enough to keep white from taking black’s bet
 
 ![dia 6](images/l20250307/igo6.jpg)
 
-Instead, black plays on the right, again threatening the 2 space extension.  Solidifying my position would be the basic move, but the right corner is a living group, so stopping black from jumping out on the left is a much bigger move.  Black does have another group growing, so expanding it would now be a smart move.
+Instead, black plays on the right, again threatening the 2 space extension.  Solidifying my position would be the basic move, but the right corner is a living group, so stopping black from jumping out on the left is a much bigger move.  Black does have another group growing, so expanding it would now be a smart move. <a id="jumpingout"></a>
 
 ![dia 7](images/l20250307/igo7.jpg)
 
-Jumping out on the left was good, but perhaps not as good as expanding the lower right.  White’s move is rather small, but it’s a calculated risk that black will respond locally and not expand elsewhere (the better move).
+Jumping out on the left was good, but perhaps not as good as expanding the
+lower right.  White’s move is rather small, but it’s a calculated risk that
+black will respond locally and not expand elsewhere (the better move).
 
 ![dia 8](images/l20250307/igo8.jpg)
 
@@ -55,9 +57,10 @@ We need to be mindful of the opening, as it sets up the areas where conflict wil
 
 ### Question 2025-03-12
 
-> Jumping out on the left was good, but perhaps not as good as expanding the
-> lower right.  White’s move is rather small, but it’s a calculated risk that
-> black will respond locally and not expand elsewhere (the better move).
+> [Jumping out](#jumpingout) on the left was good, but perhaps not as good as
+> expanding the lower right.  White’s move is rather small, but it’s a
+> calculated risk that black will respond locally and not expand elsewhere
+> (the better move).
 
 SB: Is expanding the lower right bigger because it would force a response there, so black expands his group and then can go back and defend the left? What if White doesn't respond to a move in the lower right and continues with an invasion on the left splitting blacks left side into 2 weaker groups?
 
