Add actual answer

--- a/posts/lesson-2025-03-07.md
+++ b/posts/lesson-2025-03-07.md
@@ -66,3 +66,5 @@ SB: Is expanding the lower right bigger because it would force a response there,
 
 ![dia 20](images/l20250307/igo20.jpg)
 
+Expanding the lower right quadrant gives black lots of expand myself, reduce white opportunities.  Black is fine on the left.
+
